// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Select Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-eJMPIT ibQltt sc-nFqVA jMrgjm"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 hLMdAH Select__StyledSelectDropButton-sc-17idtfo-2 gZbWFh"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kTfBZm"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iLmQXk"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 dMKWJR Select__SelectTextInput-sc-17idtfo-0 fPXvfn sc-jeGTLq bzKfYs"
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bHRIGx"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-sc-ofa7kd-0 jrmHHN"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-eJMPIT ibQltt sc-nFqVA jMrgjm"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 hLMdAH Select__StyledSelectDropButton-sc-17idtfo-2 gZbWFh"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kTfBZm"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iLmQXk"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 dMKWJR Select__SelectTextInput-sc-17idtfo-0 fPXvfn sc-jeGTLq iXWzrL"
                readonly=""
                tabindex="-1"
                type="text"
                value="Option 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bHRIGx"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-sc-ofa7kd-0 jrmHHN"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select Invalid 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-eJMPIT Ktlmn sc-nFqVA jMrgjm"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 hLMdAH Select__StyledSelectDropButton-sc-17idtfo-2 gZbWFh"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kTfBZm"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iLmQXk"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 dMKWJR Select__SelectTextInput-sc-17idtfo-0 fPXvfn sc-jeGTLq bzKfYs"
                readonly=""
                tabindex="-1"
                type="text"
                value="Option 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bHRIGx"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-sc-ofa7kd-0 jrmHHN"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select Object Options 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-eJMPIT ibQltt sc-nFqVA jMrgjm"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 hLMdAH Select__StyledSelectDropButton-sc-17idtfo-2 gZbWFh"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kTfBZm"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iLmQXk"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 dMKWJR Select__SelectTextInput-sc-17idtfo-0 fPXvfn sc-jeGTLq bzKfYs"
                readonly=""
                tabindex="-1"
                type="text"
                value="Object 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bHRIGx"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-sc-ofa7kd-0 jrmHHN"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select With Custom Option 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-eJMPIT ibQltt sc-nFqVA jMrgjm"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 hLMdAH Select__StyledSelectDropButton-sc-17idtfo-2 gZbWFh"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kTfBZm"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iLmQXk"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 dMKWJR Select__SelectTextInput-sc-17idtfo-0 fPXvfn sc-jeGTLq bzKfYs"
                readonly=""
                tabindex="-1"
                type="text"
                value="Option 1"
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bHRIGx"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-sc-ofa7kd-0 jrmHHN"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Select With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-eJMPIT ibQltt sc-nFqVA jMrgjm"
    >
      <button
        aria-label="Open Drop"
        class="StyledButton-sc-323bzc-0 hLMdAH Select__StyledSelectDropButton-sc-17idtfo-2 gZbWFh"
        type="button"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kTfBZm"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 iLmQXk"
          >
            <div
              class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 bDhrKg"
            >
              <input
                autocomplete="off"
                class="StyledTextInput-sc-1x30a0s-0 dMKWJR Select__SelectTextInput-sc-17idtfo-0 fPXvfn sc-jeGTLq bzKfYs"
                placeholder="Select one..."
                readonly=""
                tabindex="-1"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bHRIGx"
            style="min-width: auto;"
          >
            <svg
              aria-label="FormDown"
              class="StyledIcon-sc-ofa7kd-0 jrmHHN"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
